--- a/src/app/radio/radio.component.html
+++ b/src/app/radio/radio.component.html
@@ -3,7 +3,7 @@
     <div *ngFor="let label of obj.labels;let i=index">
 
       <input type="radio" name="{{obj.name}}" >
-      <label>{{label}}</label>
+      <label>{{label.option}}</label>
     </div>
 
 </div>
