--- a/src/app/radio/radio.component.html
+++ b/src/app/radio/radio.component.html
@@ -1,9 +1,17 @@
-<div>
-    <label> {{this.obj.question}}</label>
-    <div *ngFor="let label of obj.labels;let i=index">
+<div class="container-fluid">
+  <form class="card-body px-lg-5 pt-0">
+    <div class="form-group">
+      <label class="form-check-label" for="mo">Question:</label>
+      <label class="form-check-label"> {{this.obj.question}}</label>
 
-      <input type="radio" name="{{obj.name}}" >
-      <label>{{label.option}}</label>
+
+      <div *ngFor="let label of obj.labels;let i=index">
+
+        <input type="radio" class="form-check-input" name="{{obj.name}}">
+        <label>{{label.option}}</label>
+      </div>
+      <button type="submit" class="btn btn-info">Ok</button>
+
     </div>
-
+  </form>
 </div>
